# chonk

./: .gitignore  CMakeLists.txt  README.md  chonk  main.cpp
include/: banner.h  encryption.h  file_operations.h  input_utils.h  utils.h
src/: banner.cpp  encryption.cpp  file_operations.cpp  input_utils.cpp  main.cpp  utils.cpp
